java: use 'Byte.valueOf' instead of 'new Byte'
Change-Id: I5a9bc87c38cea2d5e671ed779eaedab92e98ac0d