@@ -1029,7 +1029,7 @@ public class NumericalHelper
                 break;
             case TypeClass.BYTE_value:
                 aTypeObject.iType = BYTE_TYPE;
-                aTypeObject.aValue = new Byte(AnyConverter.toByte(aValue));
+                aTypeObject.aValue = Byte.valueOf(AnyConverter.toByte(aValue));
                 break;
             case TypeClass.SHORT_value:
                 aTypeObject.iType = SHORT_TYPE;
@@ -1247,7 +1247,7 @@ public class NumericalHelper
             aShortVal = new Object[vals.length];
             for (int i = 0; i < vals.length; i++)
             {
-                aShortVal[i] = new Byte(vals[i]);
+                aShortVal[i] = Byte.valueOf(vals[i]);
             }
         }
         else if (c.equals(short[].class))
